objects/Game_Detail__c.object
<CustomObject>
    <description>This object is having game information and dependency for other game.</description>
    <fields>
        <fullName>Dependency__c</fullName>
        <label>Dependency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verbal Paired Associates</fullName>
                </value>
                <value>
                    <fullName>Deary Simple And Complex Reaction Time</fullName>
                </value>
                <value>
                    <fullName>Object Recognition And Similarity</fullName>
                </value>
                <value>
                    <fullName>Flanker</fullName>
                </value>
                <value>
                    <fullName>Face-Name Associates</fullName>
                </value>
                <value>
                    <fullName>Letter-Number Sequencing</fullName>
                </value>
                <value>
                    <fullName>Keep Track</fullName>
                </value>
                <value>
                    <fullName>Object Discrimination</fullName>
                </value>
                <value>
                    <fullName>Object Temporal</fullName>
                </value>
                <value>
                    <fullName>Object Spatial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Score_2__c</fullName>
        <label>Max Score 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <description>The Maximum Score that participant can Score By Playing the Game</description>
        <inlineHelpText>The Maximum Score that participant can Score By Playing the Game</inlineHelpText>
        <label>Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reactivation_Days__c</fullName>
        <description>After how many days, game will be re-activated for a user.</description>
        <label>Reactivation Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UI_Label__c</fullName>
        <label>UI Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Game Detail</label>
    <nameField>
        <label>Game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>